# OOP_lab_4

./: CMakeLists.txt  main.cpp  tests.cpp
include/: array.h  figure.h  pentagon.h  point.h  rhombus.h  trapezoid.h
